# HarnessAgent

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: mcp_servers.yaml  models.yaml
docs/: harness-agent-docs.html
docs/api/: harness.html  index.html  search.js
docs/api/harness/: adapters.html  agents.html  api.html  core.html  eval.html  filesystem.html  improvement.html  ingestion.html  llm.html  memory.html  messaging.html  observability.html  orchestrator.html  prompts.html  safety.html  tools.html  workers.html
docs/api/harness/workers/: agent_worker.html  hermes_worker.html
docs/architecture/: COMPREHENSIVE_OVERVIEW.md  OVERVIEW.md
docs/guides/: CONFIGURATION.md  DEPLOYMENT.md  QUICKSTART.md
docs/pitch/: BUSINESS_PITCH.md  TECHNICAL_PITCH.md
docs/reference/: API_REFERENCE.md  CODE_WALKTHROUGH.md  COMPONENTS.md  TROUBLESHOOTING.md
examples/: multi_agent_harness_eval.py
infra/: otel-collector.yml  prometheus.yml
scripts/: extract_openapi_md.py  generate_leader_presentation.py  generate_pitch_artifacts.py
src/harness/: __init__.py
src/harness/adapters/: __init__.py  autogen.py  base.py  crewai.py  langgraph.py  openclaw.py
src/harness/agents/: __init__.py  _template.py  base.py  code_agent.py  sql_agent.py
src/harness/api/: __init__.py  deps.py  main.py  middleware.py
src/harness/api/routes/: evals.py  health.py  improvement.py  memory.py  runs.py  steps.py  traces.py
src/harness/core/: __init__.py  circuit_breaker.py  config.py  context.py  cost_tracker.py  errors.py  logging_setup.py  protocols.py  rate_limiter.py  telemetry.py
src/harness/eval/: __init__.py  datasets.py  diagnostics.py  runner.py  scorers.py
src/harness/filesystem/: __init__.py  checkpoint.py  sandbox.py  workspace.py
src/harness/improvement/: __init__.py  error_collector.py  evaluator.py  hermes.py  online_monitor.py  patch_generator.py
src/harness/ingestion/: __init__.py  chunker.py  extractor.py  loaders.py  pipeline.py
src/harness/llm/: __init__.py  anthropic.py  cache.py  factory.py  hermes.py  local.py  openai_provider.py  router.py  structured.py
src/harness/memory/: __init__.py  context_engine.py  context_manager.py  embedder.py  entity_extractor.py  graph.py  graph_rag.py  manager.py  schemas.py  session_memory.py  short_term.py  vector_factory.py
src/harness/memory/backends/: __init__.py  chroma.py  qdrant.py  weaviate.py
src/harness/messaging/: __init__.py  bus.py  patterns.py  schema.py
src/harness/observability/: __init__.py  audit.py  dlq.py  event_bus.py  failures.py  metrics.py  mlflow_tracer.py  trace_recorder.py  trace_schema.py  tracer.py
src/harness/orchestrator/: __init__.py  hitl.py  planner.py  runner.py  scheduler.py
src/harness/prompts/: __init__.py  manager.py  schemas.py  store.py
src/harness/safety/: __init__.py  pipeline_factory.py  policies.py
src/harness/tools/: __init__.py  code_tools.py  file_tools.py  mcp_client.py  registry.py  skills.py  sql_tools.py
src/harness/workers/: __init__.py  agent_worker.py  hermes_worker.py
tests/: __init__.py  conftest.py
tests/integration/: test_code_agent.py  test_sql_agent.py
tests/unit/: test_adapters.py  test_agent_base.py  test_agent_base_fixes.py  test_api_traces.py  test_circuit_breaker.py  test_context.py  test_context_engine.py  test_eval_pipeline.py  test_hermes.py  test_llm_router.py  test_messaging.py  test_mlflow_monitoring.py  test_online_monitor.py  test_openai_provider.py  test_prompt_versioning.py  test_rate_limiter.py  test_tools.py  test_trace_recorder.py  test_trace_schema.py
tutorials/: 01_langgraph_hr_pipeline.py  02_crewai_project_scout.py  03_autogen_support_team.py  04_agno_research_team.py  README.md  __init__.py  _azure_client.py  _run_03.py  _run_04.py
tutorials/output/01_hr_pipeline/: final_report.md  results.json
tutorials/output/02_project_scout/: final_report.md  results.json
tutorials/output/03_support_team/: final_report.md  results.json
tutorials/output/04_agno_research/: latest_report.md  research_20260511_175653.md  results.json
ui/: dashboard.html
